--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="yellow">#FFFC01</color>
+    <color name="greyDark">#E1E2E1</color>
+    <color name="greyLight">#F5F5F6</color>
+    <color name="colorPrimary">#e64a19</color>
+    <color name="colorPrimaryDark">#ac0800</color>
+    <color name="colorPrimaryLight">#ff7d47</color>
+    <color name="colorSecondary">#64b5f6</color>
+    <color name="colorSecondaryDark">#2286c3</color>
+    <color name="colorSecondaryLight">#9be7ff</color>
 </resources>
+
