--- a/app/src/main/res/layout/fragment_new_device.xml
+++ b/app/src/main/res/layout/fragment_new_device.xml
@@ -39,6 +39,7 @@
         />
 
     <Button
+        android:id="@+id/addButton"
         android:padding="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
